c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/void/non_void_return.c
void x(void) {
  // a function with a void return type can't return an expression
  return 1;
}

int main(void) {
  x();
  return 0;
}